<resources>
    <string name="app_name">GB_ASL_calculator</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_result">=</string>
    <string name="btn_divide">/</string>
    <string name="btn_multiply">*</string>
    <string name="btn_minus">-</string>
    <string name="btn_sum">+</string>
    <string name="btn_c">C</string>
    <string name="options">options</string>
    <string name="standart_theme">standart theme</string>
    <string name="my_style_theme">my style theme</string>
    <string name="my_style_night_theme">my style night theme</string>
    <string name="open_browser">open browser</string>
    />
</resources>